# ANT-MOC

./: CMakeLists.txt  env.sh
benchmark/128_gpu/: c5g7.geo  config.yaml  slurm.job
benchmark/16_gpu/: config.yaml  slurm.job
benchmark/32_gpu/: config.yaml  slurm.job
benchmark/64_gpu/: config.yaml  slurm.job
benchmark/four_gpu/: config.yaml  slurm.job
benchmark/single_gpu/: config.yaml  slurm.job
cmake/: HipBuildSystem.cmake  yaml-cpp.cmake
include/: DeviceMaterial.h  DeviceTrack.h  OTF.h  cmdline.h
include/gpu/: GPUQuery.h  GPUSolver.h  clone.h  dev_exponential.h
include/moc/: CPULSSolver.h  CPUSolver.h  Geometry.h  Material.h  Quadrature.h  Solver.h  TrackGenerator.h  TrackGenerator3D.h  TrackTraversingAlgorithms.h  constants.h  log.h
run/: config.yaml  make_run.sh  run.sh  slurm.job
src/: CMakeLists.txt  newmoc.cpp
src/gpu/: CMakeLists.txt  GPUSolver.cu  clone.cu
src/moc/: CMakeLists.txt  CPUSolver.cpp  Geometry.cpp  Quadrature.cpp  Solver.cpp  TrackGenerator.cpp  TrackGenerator3D.cpp  TrackTraversingAlgorithms.cpp  TraverseSegments.cpp  VectorizedSolver.cpp
test/: CMakeLists.txt  gpu_opt_test.cpp  otf_test.cpp  track_geo_gen.cpp
